--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="div1">
-      stay tuned
+      taking care of your digital waste
     </div>
   </body>
 </html>
