--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </head>
   <body>
     <div id="div1">
-      taking care of your digital waste
+      <p>taking care of your digital waste</p>
+      <p>stay tuned</p>
     </div>
   </body>
 </html>
