--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <div id="div1">
-      <p>taking care of your digital waste</p>
-      <p>stay tuned</p>
+      taking care of your digital waste
+      stay tuned
     </div>
   </body>
 </html>
