--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <div id="div1">
-      taking care of your digital waste
-      stay tuned
+      <div>taking care of your digital waste</div>
+      <div>stay tuned</div>
     </div>
   </body>
 </html>
